调整表格样式

--- a/docs/style.css
+++ b/docs/style.css
@@ -15,5 +15,21 @@ h3 {
 table {
   width: 100%;
   text-align: left;
+  border-collapse: collapse;
 }
 
+table th {
+	border-width: 1px;
+	padding: 4px;
+	border-style: solid;
+	border-color: #666666;
+	background-color: #dedede;
+}
+
+table td {
+	border-width: 1px;
+	padding: 2px;
+	border-style: solid;
+	border-color: #666666;
+	background-color: #ffffff;
+}
