--- a/docs/style.css
+++ b/docs/style.css
@@ -1,6 +1,38 @@
+
+:root {
+  --background: #fff;
+  --primary: #000;
+  --secondary: #9e9e9e;
+  --accent: #2962FF
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+      --background: #fff;
+      --primary: #000;
+      --secondary: #9e9e9e;
+      --accent: #2962FF;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+      --background: #212121;
+      --primary: #f5f5f5;
+      --secondary: #9e9e9e;
+      --accent: #42a5f5;
+  }
+}
+
 body {
   max-width: 1024px;
   margin: auto;
+  color: var(--primary);
+  background-color: var(--background);
+}
+
+a, a:link {
+  color: var(--accent)
 }
 
 h1 {
@@ -22,16 +54,14 @@ table th {
 	border-width: 1px;
 	padding: 4px;
 	border-style: solid;
-	border-color: #666666;
-	background-color: #dedede;
+	border-color: var(--secondary);
 }
 
 table td {
 	border-width: 1px;
 	padding: 2px;
 	border-style: solid;
-	border-color: #666666;
-	background-color: #ffffff;
+	border-color: var(--secondary);
 }
 
 footer {
