--- a/docs/style.css
+++ b/docs/style.css
@@ -1,9 +1,9 @@
 
 :root {
-  --background: #fff;
-  --primary: #000;
-  --secondary: #9e9e9e;
-  --accent: #2962FF
+    --background: #fff;
+    --primary: #000;
+    --secondary: #9e9e9e;
+    --accent: #2962FF
 }
 
 @media (prefers-color-scheme: light) {
@@ -25,45 +25,54 @@
 }
 
 body {
-  max-width: 1024px;
-  margin: auto;
-  color: var(--primary);
-  background-color: var(--background);
+    max-width: 1024px;
+    margin: auto;
+    color: var(--primary);
+    background-color: var(--background);
 }
 
 a, a:link {
-  color: var(--accent)
+    color: var(--accent)
+}
+
+ul {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    list-style-position: inside;
+    flex-wrap: wrap;
 }
 
 h1 {
-  margin-top: 2rem;
-  text-align: center;
+    margin-top: 2rem;
+    text-align: center;
 }
 
 h3 {
-  margin-top: 3rem;
+    margin-top: 3rem;
 }
 
 table {
-  width: 100%;
-  text-align: left;
-  border-collapse: collapse;
+    width: 100%;
+    text-align: left;
+    border-collapse: collapse;
 }
 
 table th {
-	border-width: 1px;
-	padding: 4px;
-	border-style: solid;
-	border-color: var(--secondary);
+    border-width: 1px;
+    padding: 4px;
+    border-style: solid;
+    border-color: var(--secondary);
 }
 
 table td {
-	border-width: 1px;
-	padding: 2px;
-	border-style: solid;
-	border-color: var(--secondary);
+    border-width: 1px;
+    padding: 2px;
+    border-style: solid;
+    border-color: var(--secondary);
 }
 
 footer {
-  margin-top: 2rem;
+    margin-top: 2rem;
 }
