chore: 数据表中添加版本号

--- a/docs/style.css
+++ b/docs/style.css
@@ -25,10 +25,11 @@
 }
 
 body {
-    max-width: 1024px;
+    max-width: 1000px;
     margin: auto;
     color: var(--primary);
     background-color: var(--background);
+    padding: 5px;
 }
 
 a, a:link {
