--- a/docs/style.css
+++ b/docs/style.css
@@ -79,3 +79,12 @@ footer {
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
+.min {
+    font-weight: bold;
+    color: var(--secondary);
+}
+
+.max {
+    /* TODO */
+}
